# streamlit-nba-stats

./: .env.example  .gitignore  CONFIGURATION.md  README.md  main.py  pyproject.toml
.streamlit/: sample.toml
notebook/: sample.ipynb
pages/: 1_player_search.py  2_rankings.py
scripts/: __init__.py
scripts/data_pipeline/: README.md  __init__.py  client.py  config.py
scripts/data_pipeline/extractors/: __init__.py  player_stats.py
scripts/data_pipeline/jobs/: __init__.py  backfill_player_stats.py  update_current_season.py
scripts/data_pipeline/loaders/: __init__.py  bigquery_loader.py
scripts/data_pipeline/utils/: __init__.py  season_generator.py
